--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alpha-vantage-cli": "^1.0.8",
     "apollo-server": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
