--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "alpha-vantage-cli": "^1.0.8",
+    "alphavantage": "^2.2.0",
     "apollo-server": "^2.5.0",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.5.11",
     "react-router-dom": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
