--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "^2.5.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
