--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "0.1.0-beta.7",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.2",
-    "apollo-link-context": "^1.0.18",
-    "apollo-link-http": "^1.5.14",
-    "graphql": "^14.3.1",
-    "graphql-tag": "^2.10.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "chart.js": "^2.9.4",
+    "graphql": "^14.7.0",
+    "graphql-tag": "^2.11.0",
+    "history": "^5.0.0",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
+    "react-chartjs-2": "^2.11.1",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
+    "use-force-update": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
